# Some_funny_practice

./: README.md
Airport_passengers_simulation/: main.cpp  passenger.h
GPU_detector/: GPU_detector.sh
LSTM/lstm_arm/: Android.mk  Application.mk  atl_gemm.h  test_lstm_forward.c  test_lstm_forward.h
LSTM/lstm_mips/: Makefile  lstm_time.h  matrix_cal_mips.h  test_lstm_forward.c  test_lstm_forward.h
SIMD_accelerate/arm_neon/: rgb_convert.c
SIMD_accelerate/intel_avx/: matrix_mutiply1.cpp
Weather_Report/: Info.py  weather.py
avx matrix multiplication/: 002.cpp  README.md
blurry_image/: READ.md  blurry_image.m
compute-wer/: compute-wer.py
fileshare/: client.c  filein.txt  fileout.txt  include.h
fileshare/TCP/: makefile  server.c
fileshare/UDP/: client.c  file.txt  include.h  server.c
get_course/: README.md  get_course.js  get_course_2.js  get_course_junior2.js  get_courses_summer.js
load_wav/: load_wav.c  load_wav.cpp  load_wav_1200.cpp  load_wav_2.cpp  load_wav_560.cpp  load_wav_800.cpp  load_wav_800_2.cpp  load_wav_800_ami.cpp  load_wav_800_norm.cpp
mosaic/: README.md  mosaic.py
raytracing/: CMakeLists.txt  README.md  raytrace  run_linux.sh
raytracing/data/: result.ppm  scene.xml
raytracing/src/: camera.cpp  camera.h  main.cpp  object.cpp  object.h  octree.cpp  octree.h  scene.cpp  scene.h  tool.cpp  tool.h  xml.cpp  xml.h
raytracing/src/lib/include/: boxOverlap.h
raytracing/src/lib/src/: boxOverlap.cpp  objloader.cpp  pugixml.cpp  vboindexer.cpp
websipder/: README.md  mzitu.py
webspider/: README.md
